MarcoKitTests/TestData/error/object1.marcoConfig
--before
foo

--after
3: Unexpected end of file
